--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-@import "./cmps/app-header.css"; 
-@import "./basic/base.css"; 
-@import "./basic/helpers.css"; 
-@import "./basic/fonts.css"; 
+@import "./cmps/app-header.css";
+@import "./basic/base.css";
+@import "./basic/helpers.css";
+@import "./basic/fonts.css";
+@import "../css/apps/keep/cmps/note-todos.cmp.css";
