--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,4 @@
 @import "./basic/helpers.css";
 @import "./basic/fonts.css";
 @import "../css/apps/keep/cmps/note-todos.cmp.css";
+@import "../css/apps/keep/pages/keep-app.css";
