--- a/css/apps/mail/pages/email-display.css
+++ b/css/apps/mail/pages/email-display.css
@@ -3,10 +3,17 @@
   flex-direction: column;
   height: 70px;
   line-height: 1.5;
-  border-bottom: 1px solid black;
+  /* border-bottom: 1px solid black; */
   margin-bottom: 10px;
 }
 
 .email-body{
-  height: 150px;
+  height: 300px;
+  max-width: 700px;
+  overflow: auto;
+}
+
+.email-display{
+  padding-left: 60px;
+  margin: 10px auto;
 }
