--- a/css/apps/keep/pages/keep-app.css
+++ b/css/apps/keep/pages/keep-app.css
@@ -1,11 +1,13 @@
 .keeps-app {
 	background-color: #daebf2;
+}
+
+.keep-content {
 	padding: 50px;
 	display: grid;
 	gap: 15px;
 	grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
-	/* grid-auto-flow: dense; */
-	align-content: center;
+	align-items: center;
 	justify-items: center;
 }
 
