--- a/css/apps/keep/pages/keep-app.css
+++ b/css/apps/keep/pages/keep-app.css
@@ -5,7 +5,7 @@
 	gap: 15px;
 	grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
 	/* grid-auto-flow: dense; */
-	align-content: center;
+	align-items: center;
 	justify-items: center;
 }
 
