--- a/css/apps/keep/pages/keep-app.css
+++ b/css/apps/keep/pages/keep-app.css
@@ -7,10 +7,7 @@
 	display: grid;
 	gap: 15px;
 	grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
-<<<<<<< HEAD
 	/* grid-auto-flow: dense; */
-=======
->>>>>>> c17ed9194b2d8d4e711bd35e7248bf4d398e7697
 	align-items: center;
 	justify-items: center;
 }
@@ -100,4 +97,8 @@
 	color: black;
 	font-weight: 500;
 	padding: 8px;
+}
+
+.isPinned {
+	opacity: 1;
 }
