--- a/css/apps/mail/cmps/email-list.cmp.css
+++ b/css/apps/mail/cmps/email-list.cmp.css
@@ -8,8 +8,8 @@ body {
 }
 
 .email-list {
-  height: 70vh;
-  background-color: #A9E2F8;
+	height: 70vh;
+	background-color: #a9e2f8;
 }
 
 /* HELPERS */
