--- a/css/apps/mail/cmps/email-preview.cmp.css
+++ b/css/apps/mail/cmps/email-preview.cmp.css
@@ -12,6 +12,9 @@ p {
 	background-color: #ECF1F7;
   border: rgb(44, 44, 44) 1px solid;
 }
+.email-preview:hover{
+	background-color: aliceblue;
+}
 
 .sender-subject-container-preview {
 	display: flex;
@@ -29,7 +32,7 @@ p {
 	right: 0;
 }
 
-.alreadyReadEmail {
+.unreadEmail {
 	font-weight: 800;
 	background-color: #CCDAE6;
 }
