--- a/css/main.css
+++ b/css/main.css
@@ -7,3 +7,5 @@
 @import "../css/apps/mail/cmps/email-preview.cmp.css";
 @import "../css/apps/mail/pages/email-display.css";
 @import "../css/apps/keep/pages/keep-app.css";
+@import "../css/apps/keep/cmps/keep-add.cmp.css";
+@import "../css/apps/keep/cmps/keep-filter.cmp.css";
