--- a/css/main.css
+++ b/css/main.css
@@ -5,5 +5,7 @@
 @import "../css/apps/keep/cmps/note-todos.cmp.css";
 @import "../css/apps/mail/cmps/email-list.cmp.css";
 @import "../css/apps/mail/cmps/email-preview.cmp.css";
+@import "../css/apps/mail/cmps/email-side-menu.cmp.css";
 @import "../css/apps/mail/pages/email-display.css";
 @import "../css/apps/keep/pages/keep-app.css";
+@import "../css/apps/mail/pages/email-app.css";
