--- a/css/apps/mail/pages/email-app.css
+++ b/css/apps/mail/pages/email-app.css
@@ -15,3 +15,10 @@
 	grid-column: 2 / 3;
 	grid-row: 1 / 2;
 }
+
+.mainbody{
+	position: absolute;
+	top: 40px; /* Header Height */
+	bottom: 20px; /* Footer Height */
+	width: 100%;
+}
