--- a/css/apps/mail/pages/email-display.css
+++ b/css/apps/mail/pages/email-display.css
@@ -1,6 +1,7 @@
 .email-display {
 	/* padding-left: 60px;
 	margin: 10px auto; */
+	position: relative;
 	display: grid;
 	height: 80vh;
   background-color: #DAEBF2;
