--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
 @import "../css/apps/mail/cmps/email-filter.cmp.css";
 @import "../css/apps/mail/cmps/email-list.cmp.css";
 @import "../css/apps/mail/cmps/email-preview.cmp.css";
+@import "../css/apps/mail/cmps/email-compose.cmp.css";
 @import "../css/apps/mail/cmps/email-side-menu.cmp.css";
 @import "../css/apps/mail/pages/email-display.css";
 @import "../css/apps/keep/pages/keep-app.css";
