--- a/css/main.css
+++ b/css/main.css
@@ -11,3 +11,4 @@
 @import "../css/apps/mail/pages/email-app.css";
 @import "../css/apps/keep/cmps/keep-add.cmp.css";
 @import "../css/apps/keep/cmps/keep-filter.cmp.css";
+@import "../css/apps/mail/cmps/email-filter.cmp.css";
