--- a/css/apps/mail/pages/email-app.css
+++ b/css/apps/mail/pages/email-app.css
@@ -12,7 +12,7 @@
 	grid-row: 1 / 2;
 }
 
-.email-side-menu {
+.email-side-app {
 	grid-column: 1 / 2;
 	grid-row: 2 / 3;
 }
@@ -22,7 +22,7 @@
 	grid-row: 2 / 3;
 }
 
-.mainbody{
+.mainbody {
 	position: absolute;
 	top: 40px; /* Header Height */
 	bottom: 20px; /* Footer Height */
