--- a/css/cmps/app-header.css
+++ b/css/cmps/app-header.css
@@ -1,7 +1,7 @@
 /* HEADER */
 
 .app-header {
-	background-color: #52616b;
+	background-color: #0077b6;
 	color: #f0f5f9;
 	padding: 10px 60px;
 	height: 10vh;
@@ -18,6 +18,7 @@
 nav > * {
 	text-decoration: none;
 	color: #f0f5f9;
+	font-size: 20px;
 }
 
 nav > *:hover {
@@ -31,9 +32,10 @@ nav > *:not(:last-child) {
 /* FOOTER */
 
 footer {
-	background-color: #52616b;
+	background-color: #0077b6;
 	color: #f0f5f9;
 	height: 10vh;
 	padding: 15px;
 	text-align: center;
+	font-size: 25px;
 }
