--- a/css/main.css
+++ b/css/main.css
@@ -14,3 +14,4 @@
 @import "../css/apps/keep/cmps/keep-add.cmp.css";
 @import "../css/apps/keep/cmps/keep-filter.cmp.css";
 @import "../css/apps/mail/cmps/email-filter.cmp.css";
+@import "../css/pages/home-page.css";
