--- a/css/apps/mail/cmps/email-preview.cmp.css
+++ b/css/apps/mail/cmps/email-preview.cmp.css
@@ -22,10 +22,22 @@ p {
 	display: flex;
 	min-width: 500px;
 }
+.subject {
+	/* display: inline-block; */
+	max-width: 25vw;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 .sender {
-	margin-left: 10px;
 	min-width: 150px;
+	margin-left: 10px;
+	margin-right: 20px;
+}
+
+.to {
+	min-width: 100px;
 }
 
 .sentAt {
@@ -45,8 +57,12 @@ p {
 .read-btn-preview {
 	background: inherit;
 	border: none;
-	position: absolute;
-	right: 35px;
+	margin: 0 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	/* position: absolute;
+	right: 35px; */
 }
 
 .trash-btn-preview:hover {
@@ -56,4 +72,27 @@ p {
 .unreadEmail {
 	font-weight: 800;
 	background-color: #ccdae6;
+}
+
+@media (max-width: 815px){
+	.email-preview{
+		/* flex-direction: column; */
+	}
+	.sender-subject-container-preview{
+		flex-direction: column;
+		margin-left: 20px;
+		min-width: 25%;
+	}
+	.sender {
+		margin-left:0;
+	}
+	.sentAt {
+		position: unset;
+	}
+	.subject {
+		max-width: 50vw;
+	}
+	.read-btn-preview{
+		display: none;
+	}
 }
