--- a/css/apps/mail/pages/email-display.css
+++ b/css/apps/mail/pages/email-display.css
@@ -6,7 +6,7 @@
 	background-color: #daebf2;
 	grid-template-columns: 1fr 5fr;
 	grid-template-rows: 1fr;
-	justify-items: center;
+	justify-items: left;
 }
 
 .email-side-display {
@@ -23,14 +23,17 @@
 	display: flex;
 	flex-direction: column;
 	height: 70px;
+	max-width: 600px;
 	line-height: 1.5;
 	font-weight: 700;
 	margin-bottom: 10px;
+	margin-left: 40px;
 }
 
 .email-body {
+	margin-left: 40px;
 	height: 300px;
-	max-width: 700px;
+	max-width: 600px;
 	overflow: auto;
 	line-height: 1.5;
 	margin-bottom: 40px;
