--- a/css/basic/helpers.css
+++ b/css/basic/helpers.css
@@ -18,6 +18,12 @@
 	background-color: #f0f0f0;
 }
 
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 /* list helpers */
 
 .clean-list {
@@ -25,3 +31,4 @@
 	padding: 0;
 	list-style-type: none;
 }
+
