added progress bar

--- a/css/apps/mail/cmps/email-side-menu.cmp.css
+++ b/css/apps/mail/cmps/email-side-menu.cmp.css
@@ -15,3 +15,16 @@
 	padding: 10px;
 	list-style: none;
 }
+
+.progress-bar-container{
+	width: 150px;
+	height: 20px;
+	border: 1px solid black;
+	text-align: center;
+	font-weight: 600;
+}
+
+.progress-bar{
+	background-color: rgb(31, 28, 219);
+	max-width: 150px;
+}
