--- a/css/apps/mail/cmps/email-side-menu.cmp.css
+++ b/css/apps/mail/cmps/email-side-menu.cmp.css
@@ -28,3 +28,30 @@
 	background-color: rgb(31, 28, 219);
 	max-width: 150px;
 }
+
+/* .main-screen {
+	visibility: hidden;
+	cursor: pointer;
+	opacity: 0;
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-color: rgb(0 0 0 / 40%);
+	transition: opacity 0.6s;
+} */
+
+
+/* @media (max-width: 870px){
+
+	.email-side-app {
+		position: absolute;
+		background-color: inherit;
+		top: 60px;
+	}
+	.burger-menu {
+		display: block;
+		cursor: pointer;
+	}
+} */
