--- a/css/apps/mail/cmps/email-preview.cmp.css
+++ b/css/apps/mail/cmps/email-preview.cmp.css
@@ -106,6 +106,7 @@ p {
 		position: absolute;
 		background-color: inherit;
 		top: 60px;
+		display: flex;
 	}
 	.burger-menu {
 		display: contents;
