--- a/css/apps/mail/cmps/email-preview.cmp.css
+++ b/css/apps/mail/cmps/email-preview.cmp.css
@@ -102,7 +102,7 @@ p {
 	.trash-btn-preview {
 		padding-top: 32px;
 	}
-	.email-side-app {
+	.email-side-display {
 		position: absolute;
 		background-color: inherit;
 		top: 60px;
