--- a/css/cmps/app-header.css
+++ b/css/cmps/app-header.css
@@ -3,18 +3,26 @@
 .app-header {
 	background-color: #0077b6;
 	color: #f0f5f9;
+}
+
+h1 {
+	font-family: cursive;
+}
+
+.main-header {
 	padding: 10px 60px;
 	height: 10vh;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 }
+
 .logo-container {
 	display: flex;
 }
 
 .logo-container img {
-	width: 45px;
+	padding-top: 10px;
 	margin-right: 20px;
 }
 
@@ -37,6 +45,10 @@ nav > *:not(:last-child) {
 	margin-inline-end: 12px;
 }
 
+.menu-btn {
+	display: none;
+}
+
 /* FOOTER */
 
 footer {
@@ -46,7 +58,74 @@ footer {
 	padding: 15px;
 	text-align: center;
 	font-size: 25px;
-	/* position: absolute;
-  bottom: 0;
-  width: 100%; */
+}
+
+@media (max-width: 740px) {
+	.menu-btn {
+		display: block;
+		background-color: inherit;
+		border: none;
+		font-size: 25px;
+		color: #f0f5f9;
+	}
+
+	.main-header nav {
+		position: fixed;
+		right: 0;
+		top: 0;
+		flex-direction: column;
+		height: 100vh;
+		background-color: rgb(255 255 255 / 90%);
+		width: 200px;
+		transform: translateX(100%);
+		box-shadow: none;
+
+		transition: transform 0.8s, box-shadow 0.8s;
+	}
+
+	.menu-open .main-header nav {
+		transform: translateX(0);
+		box-shadow: -4px 0px 15px 0px #dcdcdc;
+	}
+
+	.main-screen {
+		visibility: hidden;
+		opacity: 0;
+		position: fixed;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		background-color: rgb(0 0 0 / 30%);
+		cursor: pointer;
+
+		transition: opacity 0.8s;
+	}
+
+	.menu-open .main-screen {
+		opacity: 1;
+		visibility: visible;
+	}
+
+	.main-header nav > *:not(:last-child) {
+		margin-inline-end: 0;
+	}
+
+	nav {
+		border-bottom: 1px solid #ccc;
+	}
+
+	.main-header nav a {
+		display: block;
+		padding: 12px 10px;
+		color: #0077b6;
+		text-align: center;
+
+		transition: background-color 0.3s, color 0.3s;
+	}
+
+	.main-header nav a:hover {
+		background-color: #0077b6;
+		color: #fff;
+	}
 }
