--- a/css/apps/mail/pages/email-app.css
+++ b/css/apps/mail/pages/email-app.css
@@ -2,7 +2,7 @@
 	background-color: #daebf2;
 	display: grid;
 	padding: 30px;
-	/* height: 100vh; */
+	height: 100vh;
 	grid-template-columns: 1fr 5fr;
 	grid-template-rows: 1fr 8fr;
 	position: relative;
