--- a/css/apps/mail/pages/email-display.css
+++ b/css/apps/mail/pages/email-display.css
@@ -2,7 +2,7 @@
 	display: grid;
 	position: relative;
 	padding: 50px;
-	/* height: 100vh; */
+	height: 100vh;
 	background-color: #daebf2;
 	grid-template-columns: 1fr 5fr;
 	grid-template-rows: 1fr;
@@ -11,7 +11,7 @@
 
 .email-side-display {
 	grid-column: 1 / 2;
-	grid-row: 1 / 2;
+	grid-row: 1 / 3;
 }
 
 .menu-email-container {
