--- a/css/apps/book/cmps/book-add.cmp.css
+++ b/css/apps/book/cmps/book-add.cmp.css
@@ -32,3 +32,10 @@
 .add-book-btn:hover {
 	opacity: 0.7;
 }
+
+@media (max-width: 360px) {
+	.book-add label {
+		display: block;
+		margin-bottom: 10px;
+	}
+}
