--- a/css/apps/keep/cmps/keep-filter.cmp.css
+++ b/css/apps/keep/cmps/keep-filter.cmp.css
@@ -21,3 +21,13 @@
 	width: 80px;
 	margin-left: 10px;
 }
+
+@media (max-width: 360px) {
+	.keep-filter input {
+		width: 200px;
+	}
+
+	.keep-filter select {
+		width: 60px;
+	}
+}
