--- a/css/cmps/app-header.css
+++ b/css/cmps/app-header.css
@@ -129,3 +129,13 @@ footer {
 		color: #fff;
 	}
 }
+
+@media (max-width: 360px) {
+	.main-header {
+		padding: 10px 10px;
+	}
+
+	footer {
+		margin-top: 25px;
+	}
+}
