--- a/css/apps/mail/cmps/email-side-menu.cmp.css
+++ b/css/apps/mail/cmps/email-side-menu.cmp.css
@@ -17,43 +17,37 @@
 	list-style: none;
 }
 
-.progress-bar-container{
+.progress-bar-container {
 	width: 150px;
-	height: 20px;
+	height: 35px;
 	text-align: center;
 	font-weight: 600;
-	border: 1px solid black;
+	border: 2px solid black;
+	border-top: 2px solid gray;
+	border-left: 2px solid gray;
 }
 
-.progress-bar{
-	background-color: rgb(31, 28, 219);
+.progress-bar {
+	background-color: #0077b6;
 	max-width: 150px;
+	height: 31px;
 	color: rgb(214, 205, 205);
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
-/* .main-screen {
-	visibility: hidden;
-	cursor: pointer;
-	opacity: 0;
-	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	background-color: rgb(0 0 0 / 40%);
-	transition: opacity 0.6s;
-} */
-
-
-/* @media (max-width: 870px){
-
-	.email-side-app {
-		position: absolute;
-		background-color: inherit;
-		top: 60px;
+@media (max-width: 1000px) {
+	.email-side-display {
+		background-color: rgb(245, 245, 245);
+		border: 1px solid black;
 	}
-	.burger-menu {
-		display: block;
-		cursor: pointer;
+
+	.btn-side-menu {
+		border: none;
 	}
-} */
+
+	.progress-bar-container {
+		border: none;
+	}
+}
