--- a/css/apps/mail/cmps/email-preview.cmp.css
+++ b/css/apps/mail/cmps/email-preview.cmp.css
@@ -116,7 +116,9 @@ p {
 		font-size: x-large;
 		cursor: pointer;
 	}
-	.menu-email-container{
+	/* .menu-email-container{
 		width: 45%;
-	}
+	} */
 }
+
+
