--- a/css/apps/mail/cmps/email-compose.cmp.css
+++ b/css/apps/mail/cmps/email-compose.cmp.css
@@ -1,15 +1,15 @@
 .email-compose {
 	position: absolute;
-	bottom: 25%;
-	right: 25%;
-  border: 1px solid black;
-	background-color: #DAEBF2;
+	bottom: 0;
+	right: 0;
+	border: 1px solid black;
+	background-color: #daebf2;
 }
 .email-compose label {
 	margin-left: 10px;
 }
 
-.email-compose div{
+.email-compose div {
 	padding-left: 10px;
 	padding-bottom: 5px;
 	border-bottom: solid black 1px;
@@ -24,7 +24,7 @@
 	padding: 5px 0;
 }
 
-.close-compose-btn{
+.close-compose-btn {
 	cursor: pointer;
 	position: absolute;
 	margin: 0;
