--- a/css/apps/mail/pages/email-display.css
+++ b/css/apps/mail/pages/email-display.css
@@ -1,12 +1,11 @@
 .email-display {
 	display: grid;
-	position: relative;
 	padding: 50px;
 	height: 100vh;
 	background-color: #daebf2;
 	grid-template-columns: 1fr 5fr;
 	grid-template-rows: 1fr;
-	justify-items: left;
+	justify-items: center;
 }
 
 .email-side-display {
@@ -69,6 +68,7 @@
 		grid-template-columns: 1fr;
 		grid-template-rows: 50px 1fr;
 		padding: 25px;
+		justify-items: left;
 	}
 
 	.email-side-display {
