--- a/css/apps/keep/pages/keep-app.css
+++ b/css/apps/keep/pages/keep-app.css
@@ -56,6 +56,10 @@
 	/* font-size: 35px; */
 }
 
+.trash-btn {
+	background-image: url("../../../../img/trash.png");
+}
+
 .pin-btn:hover,
 .color-btn:hover,
 .trash-btn:hover,
